[project]
name = "bettafish"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "aiohttp>=3.8.0",
    "aiomysql==0.2.0",
    "aiosqlite==0.21.0",
    "asyncpg==0.29.0",
    "beautifulsoup4>=4.12.0",
    "black>=23.0.0",
    "cryptography==42.0.7",
    "eventlet==0.33.3",
    "fastapi==0.110.2",
    "flake8>=6.0.0",
    "flask==2.3.3",
    "flask-socketio==5.3.6",
    "httpx==0.28.1",
    "jieba==0.42.1",
    "json-repair==0.53.0",
    "loguru>=0.7.0",
    "lxml>=4.9.0",
    "matplotlib==3.9.0",
    "numpy>=1.24.0",
    "openai>=1.3.0",
    "opencv-python>=4.8.0",
    "pandas>=2.0.0",
    "parsel==1.9.1",
    "pillow==9.5.0",
    "playwright==1.45.0",
    "plotly>=5.17.0",
    "pydantic==2.5.2",
    "pydantic-settings==2.2.1",
    "pyexecjs==1.5.1",
    "pymysql==1.1.0",
    "pysocks>=1.7.1",
    "pytest>=7.4.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "python-socketio==5.8.0",
    "pytz>=2023.3",
    "rapidfuzz>=3.14.3",
    "redis>=4.6.0",
    "regex>=2023.8.8",
    "requests==2.31.0",
    "rich>=13.9.4",
    "scikit-learn>=1.3.0",
    "socksio==1.0.0",
    "sqlalchemy==2.0.35",
    "streamlit==1.28.1",
    "tavily-python>=0.3.0",
    "tenacity==8.2.2",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
    "uvicorn==0.29.0",
    "weasyprint>=60.0",
    "wordcloud==1.9.3",
    "xgboost>=2.0.0",
]
